--- a/programs/pyproject.toml
+++ b/programs/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["wakewakame <0214.taiki@gmail.com>"]
 python = "^3.9"
 opencv-python = "^4.5.5"
 numpy = "^1.22.3"
+Flask = "^2.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
